change cell roi extraction in v2

--- a/nbs/Inference.ipynb
+++ b/nbs/Inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "nonprofit-apparatus",
    "metadata": {},
    "outputs": [],
@@ -776,9 +776,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "colonial-bullet",
+   "metadata": {},
+   "source": [
+    "### Compare to Malaria cell analyzer"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "hungry-ukraine",
+   "metadata": {},
+   "source": [
+    "website: http://malaria.test.woza.work/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "labeled-frost",
+   "id": "enclosed-amber",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -786,7 +802,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medical-computer",
+   "id": "continued-zoning",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "invisible-happiness",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "daily-visibility",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "steady-sullivan",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "packed-swaziland",
    "metadata": {},
    "outputs": [],
    "source": []
